<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>benchmark-languages</groupId>
		<artifactId>benchmark-languages</artifactId>
		<version>1.0-SNAPSHOT</version>
	</parent>
	<groupId>benchmark-languages</groupId>
	<artifactId>benchmark-java</artifactId>
	<packaging>jar</packaging>
	<version>1.0-SNAPSHOT</version>
	<name>benchmark-java</name>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
					<optimize>true</optimize>
					<debug>false</debug>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>appassembler-maven-plugin</artifactId>
				<executions>
					<execution>
						<phase>package</phase>
						<configuration>
							<extraJvmArguments>-server -Xms1024m -Xmx1024m -XX:+AggressiveOpts</extraJvmArguments>
							<!--extraJvmArguments>-server -Xms1024m -Xmx1024m</extraJvmArguments-->
							<programs>
								<program>
									<mainClass>App</mainClass>
									<name>benchmark-java</name>
								</program>
							</programs>
						</configuration>
						<goals>
							<goal>assemble</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
